--- a/tempmail/pyproject.toml
+++ b/tempmail/pyproject.toml
@@ -5,7 +5,7 @@ description = "Sistema de Email temporario com Django"
 dependencies = [
     "Django>=6.0.1,<6.1",
     "uvicorn[standard]>=0.40.0",
-    "httptools>=0.7.1"
+    "httptools>=0.7.1",
     "python-magic>=0.4.27",
     "pillow>=12.1.0",
     "whitenoise>=6.11.0",
