Atualiza dependências do projeto, substituindo a biblioteca aiosqlite por starlette e aiofiles. Modifica a configuração do servidor Uvicorn para usar 1 trabalhador e adicionar opções de log. Refatora a classe DadosView para otimizar consultas assíncronas e melhora a lógica de renderização de templates. Atualiza traduções em inglês, espanhol e português, além de ajustar o favicon e metadados no template _head.html.

--- a/tempmail/pyproject.toml
+++ b/tempmail/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "django-import-export>=4.4.0",
     "aiohttp>=3.13.3",
     "uvloop>=0.22.1",
-    "aiosqlite>=0.22.1",
+    "starlette>=0.52.1",
+    "aiofiles>=25.1.0"
 ]
 requires-python = ">=3.14"
 
