melhorando template, coorecoes de arquivos nao exibidos, melhoria na entrega de arquivos statics, melhorias nas views asyncs

--- a/docker-compose-desenvolvimento.yml
+++ b/docker-compose-desenvolvimento.yml
@@ -2,8 +2,8 @@ services:
   tempmail:
     build:
       context: .
-      dockerfile: Dockerfile
-    image: tempmail
+      dockerfile: docker/Dockerfile.dev
+    image: tempmail:dev
     command: /bin/sh -c "sh ./entrypoint.sh"
     env_file:
       - dotenv_files/.env
