--- a/tempmail/pyproject.toml
+++ b/tempmail/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "pillow>=12.1.0",
     "whitenoise>=6.11.0",
     "django-import-export>=4.4.0",
-    "aiohttp>=3.13.3",
+    "httpx[http2]>=0.28.1",
     "uvloop>=0.22.1",
     "starlette>=0.52.1",
     "aiofiles>=25.1.0"
